--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 
 # App URLs
-REACT_APP_BASE_URL=http://localhost:3000
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=https://sellscalehood-api.aaroncassar.com
